fixing view on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html{
+  background: url('11.png') no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,11 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('11.png') no-repeat center center fixed;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  
 }
 
 code {
